fix action buttons on small container

--- a/apps/studio/src/assets/styles/components/detail-view-sidebar.scss
+++ b/apps/studio/src/assets/styles/components/detail-view-sidebar.scss
@@ -132,6 +132,7 @@
 
     .actions {
       display: flex;
+      flex-wrap: wrap;
       gap: 0.5rem;
       justify-content: end;
       margin-top: 1rem;
